--- a/EncryptionForm/EncryptionForm.csproj
+++ b/EncryptionForm/EncryptionForm.csproj
@@ -46,16 +46,16 @@
   <ItemGroup>
     <Compile Include="DeEncryption.cs" />
     <Compile Include="Encryption.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="EncryptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="EncryptionForm.Designer.cs">
+      <DependentUpon>EncryptionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="EncryptionForm.resx">
+      <DependentUpon>EncryptionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
